tests/test_input_files/good/test_good_str_decl_2.punkt
main {
    const a = "test".
    print a.
}
