tests/test_input_files/bad/test_bad_if_stmt_5.punkt
main {
	if {
		print "missing condition".
	}
}
